# green-gpu

./: CMakeLists.txt  README.md
.github/workflows/: test.yaml
cmake/: CudaArchitectures.cmake  GreenDeps.cmake  GreenKernel.cmake
src/: CMakeLists.txt  cu_compute_Pq.cu  cu_routines.cu  cu_symmetry.cu  cublas_routines_prec.cu  cuda_check.cpp  cuda_common.cu  cugw_qkpt.cu  cugw_qpt.cu  cugw_utils.cu  cuhf_utils.cu  gpu_kernel.cpp  gw_gpu_kernel.cpp  hf_gpu_kernel.cpp
src/green/gpu/: base_integral.h  common_defs.h  cu_hf_utils.h  cu_routines.h  cu_symmetry.h  cublas_routines_prec.h  cuda_check.h  cuda_common.h  cuda_types_map.h  cugw_qkpt.h  cugw_qpt.h  cugw_utils.h  cuhf_utils.h  df_integral_t.h  df_integral_types_e.h  gpu_factory.h  gpu_kernel.h  gw_gpu_kernel.h  hf_gpu_kernel.h
test/: CMakeLists.txt  cu_solver_test.cpp  cu_symmetry_test.cu  cu_symmetry_test.h
test/data/: run.sh
test/data/GW/: input.h5
test/data/GW_X2C_Ar/: init.sh  make_g_input.sh
test/data/HF_X2C/: input.h5
